<resources>
    <string name="app_name">Smart Mobi</string>
    <string name="API_KEY">AIzaSyAo7GDKF2kQwdplXJQXaCRnCmjkS1q3e6Q</string>
    <string name="API_KEeY">AIzaSyAo7GDKF2kQwdplXJQXaCRnCmjkS1q3e6Q</string>
    <string name="SERVERKEY">AIzaSyDZXFJdyZMxszS5mFPQ4GCpSDK6sf0OAhQ</string>
    <string name="id_Auth_GoogleServerDEBUG">349097425170-1ren5sktiq3g5fvrecqkukoed8dp1oeh.apps.googleusercontent.com</string>
    <string name="id_Auth_GoogleServerDEBUGg">349097425170-kc8nlqccdnbfdut5rver3r2cd230gs75.apps.googleusercontent.com</string>
    <string name="id_Auth_GoogleServerRELEASE">349097425170-b2iaqka99pf6kra3a8tvcjd1puc3uc9i.apps.googleusercontent.com</string>

    <string name="facebook_app_id">117974928797421</string>
    <string name="fb_login_protocol_scheme">fb117974928797421</string>

    <string name="title_activity_menu">Maps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menuitenvagas">Consultar Vagas Preferenciais</string>
    <string name="tituloLogin">Cadastro | Login</string>
    <string name="btnlogin">Login</string>
    <string name="AdicionarVagas">Adicionar Vagas</string>
    <string name="btnBuscarcity">Buscar Endereço</string>
    <string name="erro_gps">Erro GPS !!</string>
    <string name="style_label_default">DEFAULT</string>
    <string name="sair">Logout</string>
    <string name="Localiza">Localização</string>

    <string-array name="TipoOp">
        <item>Selecione Uma Opção.</item>
        <item>Rampa de Acessibilidade</item>
        <item>Vaga Preferencial Deficiente Fisico</item>
        <item>Vaga Preferencial Idoso</item>
    </string-array>

    <string-array name="dev">
        <item>Selecione o Banco de dados</item>
        <item>teste</item>
        <item>producao</item>

    </string-array>


    <string name="title_activity_adicionar_marcador">adicionarMarcador</string>
    <string name="AdicionarvagasMaps">Localização atual</string>
    <string name="AdicionarvagasEnd">Adicionar Local</string>
    <string name="addlocalização">Enviar Localização Atual</string>
    <string name="rotas">Rotas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="TituloSplashActivity">Smart Mobi</string>
    <string name="sign_out">Sair</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="pref_key">IntroSlideConfig</string>
    <string name="description">nao sei pra que kk</string>
    <string name="password">Senha</string>
    <string name="criarconta">Criar conta</string>
    <string name="drawer_close" />
    <string name="HintLogintelefone">(11)96123-4568</string>
    <string name="hintLoginTelefoneCodigo">Codigo</string>
    <string name="AuthTextbuttom">Verificar</string>
    <string name="AuthTextbuttomEnviar">Enviar Codigo</string>
    <string name="AuthTelefoneReenviar">Reenviar</string>
    <string name="feed">Time Line</string>
    <string name="Phone_Auth_descricao">O Smart Mobi enviará um SMS para verificar seu numero de telefone. Informe corretamente o codigo de area e seu telefone.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
