<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone_Auth_descricao"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:hint="@string/HintLogintelefone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:hint="@string/hintLoginTelefoneCodigo"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3.0">

            <Button
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/AuthTextbuttomEnviar"
               />

            <Button
                android:id="@+id/button_verify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/AuthTextbuttom"
                 />

            <TextView
                android:id="@+id/button_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/AuthTelefoneReenviar"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>